@@ -2,7 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Title="Enter new profile name" Height="160" Width="387"
         ResizeMode="CanMinimize" Loaded="WindowLoaded" Icon="/Elinor;component/Images/mainicon.png" KeyDown="WindowKeyDown">
   <Grid>
-    <Label Content="Select profile name" Height="28" HorizontalAlignment="Left" Margin="12,12,0,0" Name="label1"
+    <Label Content="Enter profile name" Height="28" HorizontalAlignment="Left" Margin="12,12,0,0" Name="label1"
            VerticalAlignment="Top" />
     <TextBox Height="23" Margin="12,46,12,0" Name="tbName" VerticalAlignment="Top" TextChanged="TbNameTextChanged" />
     <Button Content="OK" Height="23" HorizontalAlignment="Right" Margin="0,0,12,12" Name="btnOk"
