@@ -266,15 +266,15 @@
         {
         "Name" = "8:Microsoft Visual Studio"
         "ProductName" = "8:Elinor reloaded"
-        "ProductCode" = "8:{AE730A73-A9D7-489A-A090-AAA86C0C9BCB}"
-        "PackageCode" = "8:{1F3A1D4A-3B8E-4325-ADB2-66C7526B4CB6}"
+        "ProductCode" = "8:{FED2A34F-04BD-45B6-8D1B-BB1BA7AB9CEA}"
+        "PackageCode" = "8:{53AE1ADD-5D35-4ED8-80A0-E794B093D82F}"
         "UpgradeCode" = "8:{F54F50ED-FDA6-4419-B476-E665ADA1FCBC}"
         "AspNetVersion" = "8:4.0.30319.0"
         "RestartWWWService" = "11:FALSE"
         "RemovePreviousVersions" = "11:FALSE"
         "DetectNewerInstalledVersion" = "11:TRUE"
         "InstallAllUsers" = "11:FALSE"
-        "ProductVersion" = "8:1.3.0.23"
+        "ProductVersion" = "8:1.3.0"
         "Manufacturer" = "8:Slivo"
         "ARPHELPTELEPHONE" = "8:"
         "ARPHELPLINK" = "8:"
@@ -849,7 +849,7 @@
         {
             "{5259A561-127C-4D43-A0A1-72F10C7B3BF8}:_03585DC2BD1048A19B1FB7CB5F6533F2"
             {
-            "SourcePath" = "8:..\\Elinor\\obj\\x86\\Debug\\Elinor.exe"
+            "SourcePath" = "8:..\\Elinor\\obj\\x86\\Release\\Elinor.exe"
             "TargetName" = "8:"
             "Tag" = "8:"
             "Folder" = "8:_1022C19006BB4A9C811CB9D8739B72B3"
