@@ -10,6 +10,7 @@ Elinor 1.3.0.23, 2014-03-15
 - Removed margin sliders
 - Added MessageBoxEx Class
 - Added check on profile update from API
+- Merged new and import buttons.
 
 Elinor 1.2.0.17, 2014-01-20
 ----------------------
